kubernetes/services/privatebin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: privatebin
  namespace: privatebin
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: privatebin
  template:
    metadata:
      labels:
        app: privatebin
    spec:
      automountServiceAccountToken: false
      nodeSelector:
        kubernetes.io/hostname: thinkcentre
      securityContext:
        runAsUser: 65534
        runAsGroup: 82
        fsGroup: 82
      containers:
        - name: privatebin
          image: privatebin/unit-pdo:2.0.6@sha256:b990915e4621d1eabd4a83df773dbde6c434616e371124c90c74d058e25209b0
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 3
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 15
            periodSeconds: 30
          securityContext:
            allowPrivilegeEscalation: false
          volumeMounts:
            - name: data
              mountPath: /srv/data
            - name: run
              mountPath: /run
            - name: tmp
              mountPath: /tmp
      volumes:
        - name: data
          hostPath:
            path: /home/main/services/privatebin/data
            type: Directory
        - name: run
          emptyDir: {}
        - name: tmp
          emptyDir: {}
