kubernetes/services/privatebin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: privatebin
  namespace: privatebin
spec:
  selector:
    app: privatebin
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
