kubernetes/services/privatebin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: privatebin
  namespace: privatebin
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/external: "true"
    gethomepage.dev/group: Apps
    gethomepage.dev/name: PrivateBin
    gethomepage.dev/icon: privatebin.png
    gethomepage.dev/description: Encrypted paste sharing
    gethomepage.dev/weight: "200"
    gethomepage.dev/siteMonitor: http://privatebin.privatebin.svc.cluster.local
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - pbin.radunenu.com
      secretName: pbin-radunenu-com-tls
  rules:
    - host: pbin.radunenu.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: privatebin
                port:
                  number: 80
